...
];

export default function DefaultScreen({
  nativeGeolocation = false,
  sections = defaultSections,
  subtitle = "API",
  title = "Geolocation API"
}: DefaultScreenProps) {
  // Permission state
  const {
    permissionStatus,
    refreshPermission,
    requestLocationPermission,
...
